<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodIepal</string>
    <string name="Login">Логин:</string>
    <string name="LoginTXT">Login</string>
    <string name="PassTXT">Password</string>
    <string name="Pass">Пароль:</string>
    <string name="PassConfirm">Подтвердите пароль:</string>
    <string name="BtnReg">Зарегистрироваться</string>
    <string name="BtnLog">Войти</string>
    <string name="Register">Регистрация</string>
    <string name="SignIn">Вход</string>
    <string name="RegQuest">Уже есть аккаунт?</string>
    <string name="LogQuest">Нет аккаунта?</string>
    <string name="Home">Главная</string>
    <string name="Basket">Корзина</string>
    <string name="favourites">Избранное</string>
    <string name="Skip">Пропустить -></string>
    <string name="Search">Поиск...</string>
    <string name="Kkal">Каллорий:</string>
    <string name="Time">Время приготовления:</string>
    <string name="Befote">От:</string>
    <string name="After">До:</string>
    <string name="Cont">Продолжить</string>
    <string name="NoCont">Отмена</string>
    <string name="items_itemAdd">Ингредиенты:</string>
    <string name="itemTime">Время:</string>
    <string name="Deskri">Описание:</string>
    <string name="Name">Название:</string>
    <string name="Dosing">Дозировка:</string>
    <string name="Add">Добавить</string>
    <string name="sendPhoto">Загрузите фотографию:</string>
    <string name="KkalValue">Общая каллорийность:</string>
    <string name="timeValue">Общее время:</string>
    <string name="ItemsValues">Ингредиенты и граммовки:</string>
    <string name="SetDesk">Описание приготовления:</string>
    <string name="SendPrep">Краткое описание:</string>
    <string name="setName">Название:</string>

</resources>