<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="270dp"
    android:layout_gravity="center"
    android:background="@color/neutral10">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/sendPhoto"
        android:textColor="@color/text_orange"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Cont"
        android:textColor="@color/black_orange"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/NoCont"
        android:textColor="@color/black_orange"
        android:textSize="20sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="191dp"
        android:layout_height="186dp"
        android:layout_above="@+id/textView16"
        android:layout_below="@+id/Title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="79.5dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/food" />
</RelativeLayout>