<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/LogTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/LoginTXT"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="580dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/Pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pass"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passTXT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/PassTXT"
                android:inputType="textPassword"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="580dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/PassConf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PassConfirm"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passConf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/PassTXT"
                android:inputType="textPassword"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>