<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ItemAdd"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/Name"
        android:textColor="@color/text_orange"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/NameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NameInput"
        android:layout_alignStart="@+id/NameInput"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/Dosing"
        android:textColor="@color/text_orange"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/DoseInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/TextExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:onClick="onClickExit"
        android:text="@string/NoCont"
        android:textColor="@color/black_orange"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:onClick="onAddListener"
        android:text="@string/Add"
        android:textColor="@color/black_orange"
        android:textSize="28sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>