<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#4080bf"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.example.FoodIepal.MainActivity">

    <FrameLayout
        android:id="@+id/Registr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <Button
        android:id="@+id/In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#7979d2 "
        android:text="@string/BtnLog"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Up"
        android:layout_width="365dp"
        android:layout_height="104dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#7979d2 "
        android:text="@string/BtnReg"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Register"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/Registr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>