<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="270dp"
    android:layout_gravity="center"
    android:background="@color/neutral10">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/ItemsValues"
        android:textColor="@color/text_orange"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Cont"
        android:textSize="20sp"
        android:textColor="@color/black_orange"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/NoCont"
        android:textSize="20sp"
        android:textColor="@color/black_orange"/>

    <EditText
        android:id="@+id/textItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/itemAdd"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/itemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="7dp"
        android:importantForAccessibility="no"
        android:src="@drawable/recipe_add_48" />


</RelativeLayout>