<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FullScreen"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/neutral10"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white">

        <EditText
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:textColor="@color/white"
            android:shadowColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor"
            android:inputType="textAutoCorrect" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/food" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Kkal"
                    android:textColor="@color/black_orange"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/itemTime"
                    android:textColor="@color/black_orange"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/KkalView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/TimeView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/items_itemAdd"
                android:textColor="@color/black_orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:lineSpacingExtra="2dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/Deskri"
                android:textColor="@color/black_orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/DeskView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:lineSpacingExtra="2dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>